Using latest Tomcat Maven Plugin with proper mem opts, and setting minimum necessary profiles.