@@ -200,11 +200,14 @@
 				<plugin>
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
-					<version>2.0-SNAPSHOT</version>
+					<version>2.0</version>
 					<configuration>
 						<port>9090</port>
 						<path>/${project.artifactId}</path>
 						<contextFile>${baseDir}/src/main/webapp/META-INF/context.xml</contextFile>
+						<systemProperties>
+						    <JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>
+  						</systemProperties>
 					</configuration>
 					<dependencies>
 						<dependency>
